--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "bt-ui-test",
+  "name": "bt-ui-library",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "styleguide": "vue-styleguidist server",
+    "styleguide:build": "vue-styleguidist build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -29,6 +31,7 @@
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-styleguidist": "^4.38.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
