--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3 # 使用部署到 GitHub pages 的 action
         with:
           publish_dir: ./docs # 部署打包后的 docs 目录
-          github_token: ${{ secrets.BT_UI_LIBRARY }} # secret 名
-          user_name: ${{ secrets.MY_USER_NAME }}
-          user_email: ${{ secrets.MY_USER_EMAIL }}
+          # github_token: ${{ secrets.BT_UI_LIBRARY }} # secret 名
+          ACCESS_TOKEN: ${{ secrets.BT_UI_LIBRARY }} # secret 名
+          # user_name: ${{ secrets.MY_USER_NAME }}
+          # user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: Update deploy Starter # 部署时的 git 提交信息，自由填写
