--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,6 @@ jobs:
         with:
           publish_dir: ./docs # 部署打包后的 docs 目录
           github_token: ${{ secrets.BT_UI_LIBRARY }} # secret 名
-          user_name: ${{ secrets.MY_USER_NAME }}
-          user_email: ${{ secrets.MY_USER_EMAIL }}
+          user_name: ${{ secrets.USER_NAME }}
+          user_email: ${{ secrets.USER_EMAIL }}
           commit_message: Update deploy Starter # 部署时的 git 提交信息，自由填写
