--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "bt-ui-library",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
+    "bootstrap": "yarn || npm i",
+    "build:file": "node build/bin/initComponent.js && node build/bin/iconInit.js && node build/bin/build-entry.js && node build/bin/version.js ",
+    "build:theme": "node build/bin/initComponent.js && node build/bin/gen-cssfile",
+    "dist": "webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js",
     "docs": "vue-styleguidist server",
     "docs:build": "vue-styleguidist build"
   },
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
@@ -22,21 +30,31 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "json-templater": "^1.2.0",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
+    "postcss": "^8.2.14",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^8.0.2",
+    "terser-webpack-plugin": "^4.1.1",
+    "uppercamelcase": "^3.0.0",
+    "vue-loader": "^15.9.6",
     "vue-styleguidist": "^4.38.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
+  "home": "",
   "lint-staged": {
     "*.{js,jsx,vue}": [
       "vue-cli-service lint",
