--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bt-ui-library",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.1",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
