--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "yarn || npm i",
     "build:file": "node build/bin/initComponent.js && node build/bin/iconInit.js && node build/bin/build-entry.js && node build/bin/version.js ",
     "build:theme": "node build/bin/initComponent.js && node build/bin/gen-cssfile",
-    "dist": "npm run build:file && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js",
+    "build:locale": "cp-cli src/locale/lang lib/locale/lang",
+    "dist": "npm run build:file  && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && npm run build:locale",
     "docs": "vue-styleguidist server",
     "docs:build": "vue-styleguidist build"
   },
@@ -30,6 +31,8 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "cp-cli": "^2.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -41,6 +44,7 @@
     "node-sass": "^4.12.0",
     "postcss": "^8.2.14",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^4.1.1",
     "uppercamelcase": "^3.0.0",
