--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "bootstrap": "yarn || npm i",
     "build:file": "node build/bin/initComponent.js && node build/bin/iconInit.js && node build/bin/build-entry.js && node build/bin/version.js ",
     "build:theme": "node build/bin/initComponent.js && node build/bin/gen-cssfile",
-    "build:locale": "cp-cli src/locale/lang lib/locale/lang",
-    "dist": "npm run build:file  && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && npm run build:locale",
+    "build:utils": "cross-env BABEL_ENV=utils babel  src --out-dir lib --ignore src/index.js",
+    "dist": "npm run build:file  && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && npm run build:utils",
     "docs": "vue-styleguidist server",
     "docs:build": "vue-styleguidist build"
   },
@@ -23,10 +23,13 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
