--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "vue-cli-service lint",
     "bootstrap": "yarn || npm i",
     "build:file": "node build/bin/initComponent.js && node build/bin/iconInit.js && node build/bin/build-entry.js && node build/bin/version.js ",
-    "build:theme": "node build/bin/initComponent.js && node build/bin/gen-cssfile",
+    "build:theme": "node build/bin/initComponent.js && node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
     "build:utils": "cross-env BABEL_ENV=utils babel  src --out-dir lib --ignore src/index.js",
     "dist": "npm run build:file  && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && npm run build:utils",
     "docs": "vue-styleguidist server",
@@ -42,9 +42,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "gulp": "^4.0.2",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.1.0",
     "json-templater": "^1.2.0",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^6.0.0",
     "postcss": "^8.2.14",
     "progress-bar-webpack-plugin": "^2.1.0",
     "rimraf": "^3.0.2",
